# ppx_record_update

./: .gitignore  Makefile  dune-project  ppx_record_update.opam  readme.md
examples/: a.ml  dune  example.ml  jbuild
src/: dune  jbuild  ppx_record_update.ml
test/: dune  errors.expected  errors.ml  jbuild  pp.expected  pp.ml  test.expected  test.ml
test/pp/: dune
