(lang dune 3.0)

(name ppx_record_update)
(generate_opam_files true)

(source
 (github dariusf/ppx_record_update))

(authors "Darius Foo")

(maintainers "darius.foo.tw@gmail.com")

(package
 (name ppx_record_update)
 (synopsis "Syntax for updates to nested records")
 (description "Syntax for updates to nested records"))
