opam-version: "2.0"
maintainer: "darius.foo.tw@gmail.com"
authors: ["Darius Foo <darius.foo.tw@gmail.com>"]
homepage: "https://github.com/dariusf/ppx_record_update"
bug-reports: "https://github.com/dariusf/ppx_record_update/issues"
dev-repo: "git+https://github.com/dariusf/ppx_record_update.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.09.0"}
  "base"
  "dune"   {>= "2.0.0"}
  "ppxlib" {>= "0.11.0"}
]
synopsis: "Syntax extension for lens-free nested record updates"
description: ""
