; generates ppx result

(rule
 (targets pp.result)
 (deps test.ml)
 (action
  (run ./pp/pp.exe --impl %{deps} -o %{targets})))

; checks ppx result, enables promotion

(rule
 (alias runtest)
 (action
  (diff pp.expected pp.result)))

; compiles and executes the test file, then compares the result

(test
 (name test)
 (modules test)
 (modes byte exe)
 (libraries ppx_deriving.std ppx_record_update)
 (preprocess
  (pps ppx_record_update ppx_deriving.show)))
